src/main/java/.antlr/TP1Parser.java
// Generated from c:\Users\USUARIO\Documents\demo\src\main\java\TP1.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TP1Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT=2, PA=3, PC=4, CA=5, CC=6, LA=7, LC=8, MAS=9, MENOS=10, 
		ASTERISCO=11, DIVISION=12, MODULO=13, MASMAS=14, MENOSMENOS=15, MASIGUAL=16, 
		MENOSIGUAL=17, PORIGUAL=18, BARRAIGUAL=19, MODULOIGUAL=20, IGUAL=21, AND=22, 
		OR=23, NOT=24, TRUE=25, FALSE=26, MAYOR=27, MENOR=28, IGUALIGUAL=29, DISTINTOIGUAL=30, 
		MAYORIGUAL=31, MENORIGUAL=32, INT=33, CHAR=34, DOUBLE=35, VOID=36, IF=37, 
		FOR=38, WHILE=39, COMILLAS=40, PUNTO=41, COMA=42, PUNTOYCOMA=43, RETURN=44, 
		THEN=45, ELSE=46, ID=47, NUMINT=48, CARACTER=49, VALORCHAR=50, NUMDOUBLE=51;
	public static final int
		RULE_prog = 0, RULE_instrucciones = 1, RULE_inst = 2, RULE_bloque = 3, 
		RULE_variables = 4, RULE_declaracionv = 5, RULE_tipovar = 6, RULE_lista = 7, 
		RULE_asignacion = 8, RULE_assignMode = 9, RULE_expresion = 10, RULE_expSimple = 11, 
		RULE_exprAND = 12, RULE_exprNOT = 13, RULE_exprRelacional = 14, RULE_comparadores = 15, 
		RULE_termino = 16, RULE_operadores = 17, RULE_factor = 18, RULE_valores = 19, 
		RULE_valorvar = 20, RULE_asignacionv = 21, RULE_tipofunc = 22, RULE_deffunc = 23, 
		RULE_declaracionfunc = 24, RULE_definicion = 25, RULE_expresionDef = 26, 
		RULE_expresionIF = 27, RULE_expresionWHILE = 28, RULE_expresionFOR = 29, 
		RULE_loopCtrl = 30, RULE_loopInit = 31, RULE_loopCond = 32, RULE_loopIncr = 33, 
		RULE_llamadafunc = 34, RULE_argumentos = 35, RULE_listaArgs = 36, RULE_returnD = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "instrucciones", "inst", "bloque", "variables", "declaracionv", 
			"tipovar", "lista", "asignacion", "assignMode", "expresion", "expSimple", 
			"exprAND", "exprNOT", "exprRelacional", "comparadores", "termino", "operadores", 
			"factor", "valores", "valorvar", "asignacionv", "tipofunc", "deffunc", 
			"declaracionfunc", "definicion", "expresionDef", "expresionIF", "expresionWHILE", 
			"expresionFOR", "loopCtrl", "loopInit", "loopCond", "loopIncr", "llamadafunc", 
			"argumentos", "listaArgs", "returnD"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", "')'", "'['", "']'", "'{'", "'}'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", 
			"'%='", "'='", "'&&'", "'||'", "'!'", "'true'", "'false'", "'>'", "'<'", 
			"'=='", "'!='", "'>='", "'<='", "'int'", "'char'", "'double'", "'void'", 
			"'if'", "'for'", "'while'", "'\"'", "'.'", "','", "';'", "'return'", 
			"'then'", "'else'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMMENT", "PA", "PC", "CA", "CC", "LA", "LC", "MAS", "MENOS", 
			"ASTERISCO", "DIVISION", "MODULO", "MASMAS", "MENOSMENOS", "MASIGUAL", 
			"MENOSIGUAL", "PORIGUAL", "BARRAIGUAL", "MODULOIGUAL", "IGUAL", "AND", 
			"OR", "NOT", "TRUE", "FALSE", "MAYOR", "MENOR", "IGUALIGUAL", "DISTINTOIGUAL", 
			"MAYORIGUAL", "MENORIGUAL", "INT", "CHAR", "DOUBLE", "VOID", "IF", "FOR", 
			"WHILE", "COMILLAS", "PUNTO", "COMA", "PUNTOYCOMA", "RETURN", "THEN", 
			"ELSE", "ID", "NUMINT", "CARACTER", "VALORCHAR", "NUMDOUBLE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TP1.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TP1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			instrucciones();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionesContext extends ParserRuleContext {
		public InstContext inst() {
			return getRuleContext(InstContext.class,0);
		}
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrucciones);
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				inst();
				setState(79);
				instrucciones();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				bloque();
				setState(82);
				instrucciones();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstContext extends ParserRuleContext {
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public DeffuncContext deffunc() {
			return getRuleContext(DeffuncContext.class,0);
		}
		public LlamadafuncContext llamadafunc() {
			return getRuleContext(LlamadafuncContext.class,0);
		}
		public ReturnDContext returnD() {
			return getRuleContext(ReturnDContext.class,0);
		}
		public DefinicionContext definicion() {
			return getRuleContext(DefinicionContext.class,0);
		}
		public InstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inst; }
	}

	public final InstContext inst() throws RecognitionException {
		InstContext _localctx = new InstContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_inst);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				variables();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				deffunc();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				llamadafunc();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				returnD();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				definicion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueContext extends ParserRuleContext {
		public TerminalNode LA() { return getToken(TP1Parser.LA, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LC() { return getToken(TP1Parser.LC, 0); }
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bloque);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(LA);
			setState(95);
			instrucciones();
			setState(96);
			match(LC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariablesContext extends ParserRuleContext {
		public DeclaracionvContext declaracionv() {
			return getRuleContext(DeclaracionvContext.class,0);
		}
		public AsignacionvContext asignacionv() {
			return getRuleContext(AsignacionvContext.class,0);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variables);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case CHAR:
			case DOUBLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				declaracionv();
				}
				break;
			case COMA:
			case PUNTOYCOMA:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				asignacionv();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionvContext extends ParserRuleContext {
		public TipovarContext tipovar() {
			return getRuleContext(TipovarContext.class,0);
		}
		public ListaContext lista() {
			return getRuleContext(ListaContext.class,0);
		}
		public TerminalNode PUNTOYCOMA() { return getToken(TP1Parser.PUNTOYCOMA, 0); }
		public DeclaracionvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracionv; }
	}

	public final DeclaracionvContext declaracionv() throws RecognitionException {
		DeclaracionvContext _localctx = new DeclaracionvContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracionv);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			tipovar();
			setState(103);
			lista();
			setState(104);
			match(PUNTOYCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipovarContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(TP1Parser.INT, 0); }
		public TerminalNode CHAR() { return getToken(TP1Parser.CHAR, 0); }
		public TerminalNode DOUBLE() { return getToken(TP1Parser.DOUBLE, 0); }
		public TipovarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipovar; }
	}

	public final TipovarContext tipovar() throws RecognitionException {
		TipovarContext _localctx = new TipovarContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tipovar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << CHAR) | (1L << DOUBLE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TP1Parser.ID, 0); }
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public ListaContext lista() {
			return getRuleContext(ListaContext.class,0);
		}
		public TerminalNode COMA() { return getToken(TP1Parser.COMA, 0); }
		public ListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lista; }
	}

	public final ListaContext lista() throws RecognitionException {
		ListaContext _localctx = new ListaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lista);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				match(ID);
				setState(109);
				asignacion();
				setState(110);
				lista();
				}
				break;
			case COMA:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(COMA);
				setState(113);
				match(ID);
				setState(114);
				asignacion();
				setState(115);
				lista();
				}
				break;
			case PUNTOYCOMA:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public AssignModeContext assignMode() {
			return getRuleContext(AssignModeContext.class,0);
		}
		public ExpSimpleContext expSimple() {
			return getRuleContext(ExpSimpleContext.class,0);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_asignacion);
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MASIGUAL:
			case MENOSIGUAL:
			case PORIGUAL:
			case BARRAIGUAL:
			case MODULOIGUAL:
			case IGUAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				assignMode();
				setState(121);
				expSimple(0);
				}
				break;
			case COMA:
			case PUNTOYCOMA:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignModeContext extends ParserRuleContext {
		public TerminalNode MASIGUAL() { return getToken(TP1Parser.MASIGUAL, 0); }
		public TerminalNode MENOSIGUAL() { return getToken(TP1Parser.MENOSIGUAL, 0); }
		public TerminalNode PORIGUAL() { return getToken(TP1Parser.PORIGUAL, 0); }
		public TerminalNode BARRAIGUAL() { return getToken(TP1Parser.BARRAIGUAL, 0); }
		public TerminalNode MODULOIGUAL() { return getToken(TP1Parser.MODULOIGUAL, 0); }
		public TerminalNode IGUAL() { return getToken(TP1Parser.IGUAL, 0); }
		public AssignModeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignMode; }
	}

	public final AssignModeContext assignMode() throws RecognitionException {
		AssignModeContext _localctx = new AssignModeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignMode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MASIGUAL) | (1L << MENOSIGUAL) | (1L << PORIGUAL) | (1L << BARRAIGUAL) | (1L << MODULOIGUAL) | (1L << IGUAL))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TP1Parser.ID, 0); }
		public AssignModeContext assignMode() {
			return getRuleContext(AssignModeContext.class,0);
		}
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode MASMAS() { return getToken(TP1Parser.MASMAS, 0); }
		public TerminalNode MENOSMENOS() { return getToken(TP1Parser.MENOSMENOS, 0); }
		public ExpSimpleContext expSimple() {
			return getRuleContext(ExpSimpleContext.class,0);
		}
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
	}

	public final ExpresionContext expresion() throws RecognitionException {
		ExpresionContext _localctx = new ExpresionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expresion);
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				match(ID);
				setState(129);
				assignMode();
				setState(130);
				expresion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				match(ID);
				setState(133);
				match(MASMAS);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				match(ID);
				setState(135);
				match(MENOSMENOS);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				expSimple(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpSimpleContext extends ParserRuleContext {
		public ExprANDContext exprAND() {
			return getRuleContext(ExprANDContext.class,0);
		}
		public ExpSimpleContext expSimple() {
			return getRuleContext(ExpSimpleContext.class,0);
		}
		public TerminalNode OR() { return getToken(TP1Parser.OR, 0); }
		public ExpSimpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expSimple; }
	}

	public final ExpSimpleContext expSimple() throws RecognitionException {
		return expSimple(0);
	}

	private ExpSimpleContext expSimple(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpSimpleContext _localctx = new ExpSimpleContext(_ctx, _parentState);
		ExpSimpleContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_expSimple, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(140);
			exprAND(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(147);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpSimpleContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expSimple);
					setState(142);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(143);
					match(OR);
					setState(144);
					exprAND(0);
					}
					} 
				}
				setState(149);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExprANDContext extends ParserRuleContext {
		public ExprNOTContext exprNOT() {
			return getRuleContext(ExprNOTContext.class,0);
		}
		public ExprANDContext exprAND() {
			return getRuleContext(ExprANDContext.class,0);
		}
		public TerminalNode AND() { return getToken(TP1Parser.AND, 0); }
		public ExprANDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprAND; }
	}

	public final ExprANDContext exprAND() throws RecognitionException {
		return exprAND(0);
	}

	private ExprANDContext exprAND(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprANDContext _localctx = new ExprANDContext(_ctx, _parentState);
		ExprANDContext _prevctx = _localctx;
		int _startState = 24;
		enterRecursionRule(_localctx, 24, RULE_exprAND, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(151);
			exprNOT();
			}
			_ctx.stop = _input.LT(-1);
			setState(158);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExprANDContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_exprAND);
					setState(153);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(154);
					match(AND);
					setState(155);
					exprNOT();
					}
					} 
				}
				setState(160);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExprNOTContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(TP1Parser.NOT, 0); }
		public ExprNOTContext exprNOT() {
			return getRuleContext(ExprNOTContext.class,0);
		}
		public ExprRelacionalContext exprRelacional() {
			return getRuleContext(ExprRelacionalContext.class,0);
		}
		public ExprNOTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprNOT; }
	}

	public final ExprNOTContext exprNOT() throws RecognitionException {
		ExprNOTContext _localctx = new ExprNOTContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_exprNOT);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOT:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				match(NOT);
				setState(162);
				exprNOT();
				}
				break;
			case PA:
			case TRUE:
			case FALSE:
			case ID:
			case NUMINT:
			case VALORCHAR:
			case NUMDOUBLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(163);
				exprRelacional();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprRelacionalContext extends ParserRuleContext {
		public List<TerminoContext> termino() {
			return getRuleContexts(TerminoContext.class);
		}
		public TerminoContext termino(int i) {
			return getRuleContext(TerminoContext.class,i);
		}
		public ComparadoresContext comparadores() {
			return getRuleContext(ComparadoresContext.class,0);
		}
		public ExprRelacionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprRelacional; }
	}
